src/runtime/crates/z42-macros/tests/fail/methods_missing_name.rs
use z42_macros::methods;

#[derive(Default)]
struct Counter { value: i64 }

#[methods(module = "demo")]
impl Counter {
    pub fn inc(&mut self) -> i64 { self.value += 1; self.value }
}

fn main() {}
